syntax = "proto3";

service FortuneTeller {
  rpc GetFortune (FortuneRequest) returns (FortuneResponse);
}

message FortuneRequest {
  string name = 1;
  message Car {
    string make = 1;
    string model = 2;
    int32 year = 3;
  }
  // this field may be absent
  Car optionalCar = 3;
  oneof vehicleDescription {
    string carNickname = 4;
    int32 bikeFrameSizeCm = 5;
  }

  repeated int32 fingerLengths = 6;

  map<string, int32> siblingAges = 7;
}

message FortuneResponse {
  enum Animal {
    MONKEY = 0;
    OWL = 1;
    ANT = 2;
    LIZARD = 3;
    CAT = 4;
  }

  string fortune = 1;
  repeated int32 luckyNumbers = 2;
  Animal luckyAnimal = 3;
}
